<resources>
    <string name="app_name">client server calc</string>
    <string name="retrieve_last_result_from_server">Retrieve last result from server</string>
    <string name="send_result_to_server">Save result to server</string>
    <string name="ac">AC</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="plusMinus">+/-</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>
