<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="MainActivity">

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:text="@string/zero" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onAc"
                android:text="@string/ac" />

            <Button
                android:id="@+id/buPlusMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperation"
                android:text="@string/plusMinus" />

            <Button
                android:id="@+id/buPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onPercent"
                android:text="@string/percent" />

            <Button
                android:id="@+id/buDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperation"
                android:text="@string/divide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bu7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:text="@string/seven" />

            <Button
                android:id="@+id/bu8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:text="@string/eight" />

            <Button
                android:id="@+id/bu9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:text="@string/nine" />

            <Button
                android:id="@+id/buMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperation"
                android:text="@string/multiply" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bu4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:text="@string/four" />

            <Button
                android:id="@+id/bu5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:text="@string/five" />

            <Button
                android:id="@+id/bu6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:text="@string/six" />

            <Button
                android:id="@+id/buMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperation"
                android:text="@string/minus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bu1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:text="@string/one" />

            <Button
                android:id="@+id/bu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:text="@string/two" />

            <Button
                android:id="@+id/bu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumber"
                android:text="@string/three" />

            <Button
                android:id="@+id/buPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperation"
                android:text="@string/plus" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bu0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNumber"
            android:text="@string/zero" />

        <Button
            android:id="@+id/buDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNumber"
            android:text="@string/dot" />

        <Button
            android:id="@+id/buEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onEqual"
            android:text="@string/equal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/sendToServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendToServer"
            android:text="@string/send_result_to_server" />

        <Button
            android:id="@+id/getFromServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getFromServer"
            android:text="@string/retrieve_last_result_from_server" />
    </LinearLayout>

</LinearLayout>
